Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14049

ofd_access_log_reader thread leak

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      In ofd_access_log_reader the thread spawned from alr_batch_print() is created with a default (joinable) thread attribute but is never joined thus leaking the thread resources. This causes ofd_access_log_reader to eventually run out of memory maps:

      # pidof ofd_access_log_reader
      1631
      # wc -l /proc/1631/maps
      65531
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: